[gd_scene load_steps=25 format=3 uid="uid://clwd2pt32yncv"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_3b6d0"]
[ext_resource type="PackedScene" uid="uid://ragpw1u7o272" path="res://Scenes/SoundPool.tscn" id="3_5wyd6"]
[ext_resource type="AudioStream" uid="uid://b334iymjefvjt" path="res://sound/player/footsteps/footstep-01.wav" id="4_cyjsu"]
[ext_resource type="AudioStream" uid="uid://dhb2v0johtgrx" path="res://sound/player/footsteps/footstep-02.wav" id="5_ejcol"]
[ext_resource type="AudioStream" uid="uid://cc6ss3j0jtg0f" path="res://sound/player/footsteps/footstep-03.wav" id="6_0eb3l"]
[ext_resource type="AudioStream" uid="uid://b0lqgx6sacap0" path="res://sound/player/footsteps/footstep-04.wav" id="7_kgvmh"]
[ext_resource type="AudioStream" uid="uid://bdhaa7pl66un4" path="res://sound/player/footsteps/footstep-06.wav" id="9_ycwt6"]
[ext_resource type="AudioStream" uid="uid://dnl0yiwr7d0dq" path="res://sound/player/footsteps/footstep-07.wav" id="10_mv6nt"]
[ext_resource type="AudioStream" uid="uid://dv1cq0dsgo733" path="res://sound/player/footsteps/footstep-08.wav" id="11_3damw"]
[ext_resource type="AudioStream" uid="uid://bw7pouo5176wq" path="res://sound/player/footsteps/footstep-09.wav" id="12_02hid"]
[ext_resource type="AudioStream" uid="uid://dg8cvmmgq0bhb" path="res://sound/player/footsteps/footstep-10.wav" id="13_pyxit"]
[ext_resource type="AudioStream" uid="uid://66t3kprdn10v" path="res://sound/player/footsteps/footstep-11.wav" id="14_bdr84"]
[ext_resource type="AudioStream" uid="uid://nt37jqg54jp4" path="res://sound/player/footsteps/footstep-12.wav" id="15_vqsxl"]
[ext_resource type="AudioStream" uid="uid://xxjthwcyqt7q" path="res://sound/player/footsteps/footstep-13.wav" id="16_5ko06"]
[ext_resource type="AudioStream" uid="uid://cojyybspgc7vo" path="res://sound/player/footsteps/footstep-14.wav" id="17_rv7eb"]
[ext_resource type="AudioStream" uid="uid://bdt1y3jmcouwp" path="res://sound/player/footsteps/footstep-15.wav" id="18_pdj6d"]
[ext_resource type="AudioStream" uid="uid://3smgdwu15dt8" path="res://sound/player/footsteps/footstep-16.wav" id="19_4pbte"]
[ext_resource type="Script" path="res://Scripts/movement_component.gd" id="20_0lofs"]
[ext_resource type="PackedScene" uid="uid://dkrit1or0dx6l" path="res://Scenes/BoxViewmodel.tscn" id="20_nane8"]
[ext_resource type="AudioStream" uid="uid://c2u366qvrse6p" path="res://sound/player/footsteps/footstep-17.wav" id="20_otevg"]
[ext_resource type="PackedScene" uid="uid://svglya4ctrq6" path="res://Scenes/chart.tscn" id="21_ufli1"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mraqt"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_t1wh2"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="BoxShape3D" id="BoxShape3D_gtlu7"]
size = Vector3(1.5, 1, 1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(-1, 0, 1.50996e-07, 0, 1, 0, -1.50996e-07, 0, -1, 0, 0, 0)
collision_layer = 130
collision_mask = 2
script = ExtResource("1_3b6d0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
layers = 262144
mesh = SubResource("CapsuleMesh_mraqt")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("ConvexPolygonShape3D_t1wh2")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="Viewmodel" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.415, -0.572)

[node name="BoxViewmodel" parent="Head/Viewmodel" instance=ExtResource("20_nane8")]
transform = Transform3D(0.9, 1.00356e-08, -3.7106e-10, -1.00356e-08, 0.897543, -0.0664627, -3.7106e-10, 0.0664627, 0.897543, 0, -0.000365853, 0)
visible = false

[node name="ChartAnchor" type="Node3D" parent="Head/Viewmodel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.098, 0.329399, 0.229)

[node name="Chart" parent="Head/Viewmodel/ChartAnchor" instance=ExtResource("21_ufli1")]
transform = Transform3D(0.192719, 0, -0.0534746, 0, 0.2, 0, 0.0534746, 0, 0.192719, -0.000257999, 0.000129342, -0.000195265)

[node name="Vision" type="Node3D" parent="Head"]

[node name="Camera" type="Camera3D" parent="Head/Vision"]
cull_mask = 262143
current = true

[node name="TopCamera" type="Camera3D" parent="Head/Vision"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 12, 0)
cull_mask = 524287

[node name="FootstepsPool" parent="." instance=ExtResource("3_5wyd6")]

[node name="Footstep" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("4_cyjsu")
bus = &"Player Footsteps"

[node name="Footstep2" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("5_ejcol")
bus = &"Player Footsteps"

[node name="Footstep3" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("6_0eb3l")
bus = &"Player Footsteps"

[node name="Footstep4" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("7_kgvmh")
bus = &"Player Footsteps"

[node name="Footstep6" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("9_ycwt6")
bus = &"Player Footsteps"

[node name="Footstep7" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("10_mv6nt")
bus = &"Player Footsteps"

[node name="Footstep8" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("11_3damw")
bus = &"Player Footsteps"

[node name="Footstep9" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("12_02hid")
bus = &"Player Footsteps"

[node name="Footstep10" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("13_pyxit")
bus = &"Player Footsteps"

[node name="Footstep11" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("14_bdr84")
bus = &"Player Footsteps"

[node name="Footstep12" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("15_vqsxl")
bus = &"Player Footsteps"

[node name="Footstep13" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("16_5ko06")
bus = &"Player Footsteps"

[node name="Footstep14" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("17_rv7eb")
bus = &"Player Footsteps"

[node name="Footstep15" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("18_pdj6d")
bus = &"Player Footsteps"

[node name="Footstep16" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("19_4pbte")
bus = &"Player Footsteps"

[node name="Footstep17" type="AudioStreamPlayer" parent="FootstepsPool"]
stream = ExtResource("20_otevg")
bus = &"Player Footsteps"

[node name="MovementComponent" type="Node" parent="." node_paths=PackedStringArray("body")]
script = ExtResource("20_0lofs")
body = NodePath("..")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BoxViewportContainer" type="SubViewportContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 600.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="Control/BoxViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(640, 480)
render_target_update_mode = 4

[node name="BoxCamera" type="Camera3D" parent="Control/BoxViewportContainer/SubViewport"]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 1.5, 0)
cull_mask = 524288

[node name="FloorRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -9.28644e-08, -1, 0, 2.12449, -4.37114e-08, -0.000199318, 0.1432, 0.000105858)
collision_mask = 2

[node name="InteractionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.62269e-07, 0, -1)

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractionArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.5)
shape = SubResource("BoxShape3D_gtlu7")

[connection signal="area_entered" from="InteractionArea" to="." method="_on_interaction_area_body_detection"]
[connection signal="body_entered" from="InteractionArea" to="." method="_on_interaction_area_body_entered"]
